Removed em font size from mobile search toggle button to make sure it is not shifts on settings font increases

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -13774,9 +13774,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
    /source/scss/cagov/nav-mobile-controls.scss
 ----------------------------------------- */
 .mobile-controls {
-  font-size: 40px;
-  font-size: 2.5rem;
-  padding: .2em;
+  padding: 5px;
   cursor: pointer;
   text-align: right;
   position: relative;
@@ -13824,8 +13822,8 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 .mobile-controls .ca-gov-icon-menu-toggle-open, .mobile-controls .ca-gov-icon-menu-toggle-closed {
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 16px;
+  padding-right: 16px;
   line-height: 44px;
 }
 
@@ -13839,6 +13837,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 .mobile-controls .toggle-search {
   padding: 0;
   width: 52px;
+  font-size: 40px;
   border: none;
   background: none;
   cursor: pointer;
